fix name wrapping

--- a/controls/tap50modal/styles.css
+++ b/controls/tap50modal/styles.css
@@ -35,6 +35,7 @@ body {
     font-size: 6vw;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
     /* background-color: gold; */
 }
 
